// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Posts Bulk API Delete Can delete all posts 1: [body] 1`] = `
Object {
  "bulk": Object {
    "meta": Object {
      "errors": Array [],
      "stats": Object {
        "successful": 2,
        "unsuccessful": 0,
      },
    },
  },
}
`;

exports[`Posts Bulk API Delete Can delete posts that match a tag 1: [body] 1`] = `
Object {
  "bulk": Object {
    "meta": Object {
      "errors": Array [],
      "stats": Object {
        "successful": 11,
        "unsuccessful": 0,
      },
    },
  },
}
`;

exports[`Posts Bulk API Edit Can add a single tag to posts 1: [body] 1`] = `
Object {
  "bulk": Object {
    "meta": Object {
      "stats": Object {
        "successful": 11,
        "unsuccessful": 0,
      },
    },
  },
}
`;

exports[`Posts Bulk API Edit Can add multiple tags to posts and create new tags 1: [body] 1`] = `
Object {
  "bulk": Object {
    "meta": Object {
      "stats": Object {
        "successful": 1,
        "unsuccessful": 0,
      },
    },
  },
}
`;

exports[`Posts Bulk API Edit Can change access of posts 1: [body] 1`] = `
Object {
  "bulk": Object {
    "meta": Object {
      "errors": Array [],
      "stats": Object {
        "successful": 13,
        "unsuccessful": 0,
      },
      "unsuccessfulData": Array [],
    },
  },
}
`;

exports[`Posts Bulk API Edit Can change access of posts to tiers 1: [body] 1`] = `
Object {
  "bulk": Object {
    "meta": Object {
      "errors": Array [],
      "stats": Object {
        "successful": 13,
        "unsuccessful": 0,
      },
      "unsuccessfulData": Array [],
    },
  },
}
`;

exports[`Posts Bulk API Edit Can feature multiple posts 1: [body] 1`] = `
Object {
  "bulk": Object {
    "meta": Object {
      "errors": Array [],
      "stats": Object {
        "successful": 13,
        "unsuccessful": 0,
      },
      "unsuccessfulData": Array [],
    },
  },
}
`;

exports[`Posts Bulk API Edit Can unfeature multiple posts 1: [body] 1`] = `
Object {
  "bulk": Object {
    "meta": Object {
      "errors": Array [],
      "stats": Object {
        "successful": 13,
        "unsuccessful": 0,
      },
      "unsuccessfulData": Array [],
    },
  },
}
`;

exports[`Posts Bulk API Edit Can unpublish posts 1: [body] 1`] = `
Object {
  "bulk": Object {
    "meta": Object {
      "errors": Array [],
      "stats": Object {
        "successful": 11,
        "unsuccessful": 0,
      },
      "unsuccessfulData": Array [],
    },
  },
}
`;
